argocd/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: biftin-dev
  labels:
    name: biftin-dev
