argocd/02-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: biftin-dev
  namespace: biftin-dev
  labels:
    app: biftin-dev
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: biftin-dev
  template:
    metadata:
      labels:
        app: biftin-dev
    spec:
      containers:
      - name: biftin-dev
        image: ghcr.io/biftin/biftin.dev:a9eebf6975911ecacd5a7b356616ca57768058d3
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: "100m"
            memory: "64Mi"
          limits:
            cpu: "250m"
            memory: "128Mi"
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
        # securityContext:
        #   runAsNonRoot: true
        #   runAsUser: 1000
        #   allowPrivilegeEscalation: false
