argocd/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: biftin-dev
  namespace: biftin-dev
  labels:
    app: biftin-dev
spec:
  selector:
    app: biftin-dev
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
