argocd/04-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: biftin-dev
  namespace: biftin-dev
  labels:
    app: biftin-dev
  annotations:
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/use-http2: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  rules:
  - host: www.biftin.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: biftin-dev
            port:
              number: 80
  tls:
  - hosts:
    - www.biftin.dev
    - biftin.dev
    secretName: biftin-dev-tls
